# subtitles

./: .gitignore  Cargo.toml  README.md  config.toml  style.css
.github/workflows/: ci.yml  release.yml
examples/: convert.rs
fjall.db/keyspaces/0/: current  v2
fjall.db/keyspaces/0/tables/: 0
fjall.db/keyspaces/1/: current  v0
src/: lib.rs  main.rs
templates/: list.html
