[package]
name = "subtitles"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = { version = "0.8.8", features = [
    "http1",
    "query",
    "tokio",
], default-features = false }
basic-toml = "0.1.10"
fjall = "3.0.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.7", features = [
    "fs",
] }

[dev-dependencies]
mysql = { version = "26.0.1", features = [
    "derive",
] }
